--- a/src/_aside.html
+++ b/src/_aside.html
@@ -1,14 +1,12 @@
 <aside id="aside">
     <div class="aside-header-wrap">
         <div class="logo">
-            <img src="/img/Logo@3x.svg" alt="">
+            <img src="/img/Logo@3x.svg" alt="logo">
             <span class="company-name">PROJECTUS</span>
         </div>
         <form action="/searc" class="search-form">
             <input type="text" id="search">
-            <div class="search-icon">
-                <img src="/img/search.svg" alt="">
-            </div>
+            <div class="search-icon"></div>
         </form>
     </div>
     <div class="btn-menu">
@@ -21,7 +19,7 @@
     <div class="product-owner">
         <div class="owner-helper">
             <div class="owner-photo">
-                <img src="/img/girl1.jpg" alt="">
+                <img src="/img/girl1.jpg" alt="user-avatar">
             </div>
             <div class="owner-wrap">
                 <div class="owner-name">
