--- a/src/_header.html
+++ b/src/_header.html
@@ -2,7 +2,7 @@
     <div class="top-header">
         <div class="task-title-wrap">
             <div class="logo">
-                <img src="/img/logo.png" alt="">
+                <img src="/img/logo.png" alt="logo">
             </div>
             <div class="task-title">Website Redesign</div>
             <div class="more-info">•••</div>
@@ -12,25 +12,24 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="/img/girl2.jpeg" alt="">
+                            <img src="/img/girl2.jpeg" alt="user-avatar">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="/img/girl3.jpg" alt="">
+                            <img src="/img/girl3.jpg" alt="user-avatar">
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="/img/man.jpg" alt="">
+                            <img src="/img/man.jpg" alt="user-avatar">
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="social-btns">
                 <button class="btn btn-share">Share</button>
-                <button class="btn btn-chat">
-                    <img src="/img/chat.svg" alt="">Chat</button>
+                <button class="btn btn-chat">Chat</button>
             </div>
         </div>
     </div>
