--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,11 @@
     <meta property="og:description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--favicon-->
-
     <link rel="shortcut icon" href="img/favicon/favicon.ico">
-
     <!--style-->
     <link rel="stylesheet" href="css/style.min.css">
+    <!--scripts-->
+    <script src="js/script.min.js"></script>
 </head>
 
 <body>
@@ -34,10 +34,9 @@
                         <div class="tab-title">Today</div>
                         <div class="tab-section">
                             <div class="tab-desc">
-                                <div class="icon">
-                                    <img src="/img/icon.svg" alt="">
-                                </div>
-                                <p>Darika Samak mark as done Listing on Product Hunt so that we can reach as many potential
+                                <div class="icon icon-approve"></div>
+                                <p>Darika Samak mark as done Listing on Product Hunt so that we can reach as many
+                                    potential
                                     users
                                 </p>
                             </div>
@@ -46,33 +45,22 @@
                         <div class="wrap-helper">
                             <div class="tab-section">
                                 <div class="tab-desc">
-                                    <div class="icon icon-mess">
-                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="comment-alt" role="img" xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 512 512" class="svg-inline--fa fa-comment-alt fa-w-16 fa-3x">
-                                            <path fill="currentColor" d="M448 0H64C28.7 0 0 28.7 0 64v288c0 35.3 28.7 64 64 64h96v84c0 9.8 11.2 15.5 19.1 9.7L304 416h144c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64z"
-                                                class=""></path>
-                                        </svg>
-                                    </div>
+                                    <div class="icon icon-mess"></div>
                                     <p>Emilee Simchenko commented on Account for teams and personal in bottom style</p>
                                 </div>
                                 <div class="activity-time">8:40 PM</div>
 
                             </div>
                             <div class="mess-body">
-                                During a project build, it is necessary to evaluate the product design and development against project requirements and outcomes
+                                During a project build, it is necessary to evaluate the product design and development
+                                against project requirements and outcomes
                             </div>
 
                         </div>
                         <div class="wrap-helper">
                             <div class="tab-section">
                                 <div class="tab-desc">
-                                    <div class="icon icon-upload">
-                                        <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="file-upload" role="img" xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 384 512" class="svg-inline--fa fa-file-upload fa-w-12 fa-3x">
-                                            <path fill="currentColor" d="M369.9 97.98L286.02 14.1c-9-9-21.2-14.1-33.89-14.1H47.99C21.5.1 0 21.6 0 48.09v415.92C0 490.5 21.5 512 47.99 512h288.02c26.49 0 47.99-21.5 47.99-47.99V131.97c0-12.69-5.1-24.99-14.1-33.99zM256.03 32.59c2.8.7 5.3 2.1 7.4 4.2l83.88 83.88c2.1 2.1 3.5 4.6 4.2 7.4h-95.48V32.59zm95.98 431.42c0 8.8-7.2 16-16 16H47.99c-8.8 0-16-7.2-16-16V48.09c0-8.8 7.2-16.09 16-16.09h176.04v104.07c0 13.3 10.7 23.93 24 23.93h103.98v304.01zm-180.1-247.32l-68.12 71.75c-7.81 8.2-9.94 20.31-5.44 30.83 4.41 10.31 14 16.72 25 16.72H176V424c0 4.42 3.58 8 8 8h16c4.42 0 8-3.58 8-8v-88.02h52.66c11 0 20.59-6.41 25-16.72 4.5-10.52 2.38-22.62-5.44-30.81l-68.12-71.78c-10.69-11.19-29.51-11.2-40.19.02zm-38.75 87.29l58.84-62 58.84 62H133.16z"
-                                                class=""></path>
-                                        </svg>
-                                    </div>
+                                    <div class="icon icon-upload"></div>
                                     <p>Emilee Simchenko commented on Account for teams and personal in bottom style</p>
                                 </div>
                                 <div class="activity-time">8:40 PM</div>
@@ -80,16 +68,16 @@
                             </div>
                             <div class="upload-files">
                                 <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="">
+                                    <img src="/img/img2.jpg" alt="content-image">
                                 </div>
                                 <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="">
+                                    <img src="/img/img2.jpg" alt="content-image">
                                 </div>
                                 <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="">
+                                    <img src="/img/img2.jpg" alt="content-image">
                                 </div>
                                 <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="">
+                                    <img src="/img/img2.jpg" alt="content-image">
                                 </div>
                             </div>
 
@@ -114,5 +102,5 @@
         <!-- /.main-block -->
     </div>
 </body>
-<script type="text/javascript" src="js/script.min.js"></script>
+
 </html>
