--- a/src/_aside.html
+++ b/src/_aside.html
@@ -35,11 +35,11 @@
     <div class="aside-main-wrap">
         <div class="task-wrap">
             <div class="complited-task">
-                <div class="task-count">372</div>
+                <div class="task-count" id="completed">372</div>
                 <div class="task-status">Completed Tasks</div>
             </div>
             <div class="open-task">
-                <div class="task-count">11</div>
+                <div class="task-count" id="open">5</div>
                 <div class="task-status">Open Tasks</div>
             </div>
         </div>
@@ -55,7 +55,7 @@
                 <li>
                     <a href="#">
                         <span>Notifications</span>
-                        <div class="notification-icon">3</div>
+                        <div class="notification-icon" id="notification">3</div>
                     </a>
                 </li>
             </ul>
