--- a/src/index.html
+++ b/src/index.html
@@ -64,23 +64,8 @@
                                     <p>Emilee Simchenko commented on Account for teams and personal in bottom style</p>
                                 </div>
                                 <div class="activity-time">8:40 PM</div>
-
                             </div>
-                            <div class="upload-files">
-                                <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="content-image">
-                                </div>
-                                <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="content-image">
-                                </div>
-                                <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="content-image">
-                                </div>
-                                <div class="img-wrap">
-                                    <img src="/img/img2.jpg" alt="content-image">
-                                </div>
-                            </div>
-
+                            <div class="upload-files"></div>
                         </div>
 
                     </div>
